# pred_mkt_tick_event

./: .gitignore  README.md  config.py  pyproject.toml
results/: all_results.csv
results/tables/: lead_lag_summary.csv  lead_lag_summary.md
src/analysis/: lead_lag.py  run_analysis.py  tda.py  visualize.py
src/data/: __main__.py  eodhd_client.py  ingest_cli.py  ingest_eodhd.py  ingest_telonex.py  ingest_ticks.py  macro_calendar.py  telonex_client.py  watchlists.py
